<resources>
    <string name="app_name">Calculator</string>
    <string name="str_equal">=</string>
    <string name="str_minus">-</string>
    <string name="str_add">+</string>
    <string name="str_multipe">x</string>
    <string name="str_divide">/</string>
    <string name="str_minusNadd">-/+</string>
    <string name="str_percent">%</string>
    <string name="str_leftbracket">(</string>
    <string name="str_rightbracket">)</string>
    <string name="str_delete">Del</string>
    <string name="str_cancel">C</string>
    <string name="str_nine">9</string>
    <string name="str_eight">8</string>
    <string name="str_seven">7</string>
    <string name="str_six">6</string>
    <string name="str_five">5</string>
    <string name="str_four">4</string>
    <string name="str_three">3</string>
    <string name="str_two">2</string>
    <string name="str_one">1</string>
    <string name="str_zero">0</string>
    <string name="str_point">.</string>
    <string name="str_base">Bases</string>
    <string name="str_defaultNumber">0</string>
    <string name="bitwiseInputHint1">Enter Number 1</string>
    <string name="bitwiseInput2">Enter Number 2</string>
    <string name="hex">HEX</string>
    <string name="dec">DEC</string>
    <string name="oct">OCT</string>
    <string name="bin">BIN</string>
    <string-array name="bitwise_array">
        <item>Bitwise</item>
        <item>AND</item>
        <item>OR</item>
        <item>XOR</item>
    </string-array>


</resources>